Game room design fixed, lets try

--- a/docs/S1.md
+++ b/docs/S1.md
@@ -5,16 +5,13 @@
 
 ---
 
-## ⚠️ Текущая проблема
+## ✅ Текущее состояние
 
-**Статус**: Решается (см. ISSUE.md)
-
-**Суть**: При переходе из MainMenu в GameRoom возникают ошибки:
-- Race condition с async cleanup в RoomList
-- React StrictMode вызывает преждевременный disconnect
-- Несинхронизированные форматы данных между сервером и клиентом
-
-**Решение в процессе**: Исправление async/await логики, защита от StrictMode, унификация форматов данных.
+- Исправлен переход MainMenu → GameRoom (race-condition, StrictMode, синхронизация state).
+- Добавлен dev-флаг `VITE_FORCE_GAMEROOM` + `VITE_GAMEROOM_MOCK` для автономной верстки.
+- GameRoom снова показывает полноценную доску с слоями и фишками даже при ожидании.
+- Профили игроков приходят с бэка (username + avatar), в том числе для локального игрока.
+- Журнал (ISSUE.md) обновлен по итогам расследования.
 
 ---
 
